overflow fix

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ main {
 form {
     height: 1086px;
     width: 428px;
-
+    overflow-x: hidden;
     text-align: center;
 }
 
